samples/_failures_safe/1761563428_2aba08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb6ba9d5.c: In function ‘main’:
./samples/SAFE/__tmp_cb6ba9d5.c:142:16: error: ‘EXIT’ undeclared (first use in this function)
  142 |         return EXIT
      |                ^~~~
./samples/SAFE/__tmp_cb6ba9d5.c:142:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_cb6ba9d5.c:142:20: error: expected ‘;’ at end of input
  142 |         return EXIT
      |                    ^
      |                    ;
./samples/SAFE/__tmp_cb6ba9d5.c:142:9: error: expected declaration or statement at end of input
  142 |         return EXIT
      |         ^~~~~~
./samples/SAFE/__tmp_cb6ba9d5.c:142:9: error: expected declaration or statement at end of input
